# sandbox-utility-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/: runtime.Dockerfile
k8s/: README.md  service.yaml
src/sandbox_service/: __init__.py  api.py  auth.py  main.py  models.py  runner.py  service.py  settings.py
src/sandbox_service/runners/: fake.py  kubernetes_runner.py  kubernetes_specs.py  local_dev.py  subprocess_runner.py
src/sandbox_service/runtime/: __init__.py  io.py  runtime_wrapper.py
tests/: test_api.py  test_kubernetes_specs.py  test_local_dev_runner.py  test_runtime_io.py  test_settings.py  test_subprocess_runner.py
