[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-utility-service"
version = "0.1.0"
description = "Python sandbox execution service for AI tool calling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "kubernetes>=30.1.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "scipy>=1.13.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
